
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int msg_namelen; int msg_iovlen; struct iovec* msg_iov; struct sockaddr_in* msg_name; TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct msghdr {int msg_namelen; int msg_iovlen; struct iovec* msg_iov; struct msghdr* msg_name; TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct iovec {int iov_len; unsigned long* iov_base; } ;
typedef int recvaddr ;
typedef int msg ;
typedef int buf ;


 int AF_INET ;
 int RECVPORT ;
 int exit (int) ;
 int htons (int ) ;
 int inet_addr (char*) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int printf (char*) ;
 int sendmsg (int,struct sockaddr_in*,int ) ;

void send_message(unsigned long value, int sock)
{

 int size, ret;
 struct sockaddr_in recvaddr;
 struct msghdr msg;
 struct iovec iov;
 unsigned long buf;

 memset(&recvaddr, 0, sizeof(recvaddr));

 size = sizeof(recvaddr);

 recvaddr.sin_port = htons(RECVPORT);
 recvaddr.sin_family = AF_INET;
 recvaddr.sin_addr.s_addr = inet_addr("127.0.0.1");

 memset(&msg, 0, sizeof(msg));

 msg.msg_name = &recvaddr;
 msg.msg_namelen = sizeof(recvaddr);
 msg.msg_iovlen = 1;

 buf = value;

 iov.iov_len = sizeof(buf);
 iov.iov_base = &buf;

 msg.msg_iov = &iov;

 ret = sendmsg(sock, &msg, 0);
 if(ret < 0) {
  printf("[*] Something went wrong sending.\n");
  exit(-1);
 }
}
